--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,136 @@
-.main-page{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    padding-top: 5%;
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: hsl(0, 51%, 71%);
+  overflow-x: hidden;
+}
+button {
+  padding: 16px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 16px;
+  color: white;
+  border-radius: 8px;
+  cursor: pointer;
+}
 
+h3, h4 {
+  margin-bottom: 0;
+}
+
+
+.primary-nav{
+  display: flex;
+  gap: 5rem;
+  padding-block: 16px;
+  padding-inline: clamp(3rem,5vw,10rem);
+  list-style: none;
+  margin: 0;
+  font-weight: 600; 
+  text-decoration: none;
+  justify-content: flex-end;
+  background: hsl(0 0% 100% /0.1);
+  backdrop-filter:blur(2rem);
+}
+
+
+.primary-nav a{
+  text-decoration: none;
+
+}
+.primary-nav a:visited{
+  text-decoration: none;
+  color: white;
+
+}
+.hid-but{
+  display: none;
+  
+}
+
+@media  (max-width: 35em) {
+  .primary-nav {
+    gap: 4em;
+    position: fixed;
+    z-index: 1000;
+    inset: 0 0 0 30%;
+    background: hsl(0 0% 100% /0.1);
+    backdrop-filter: blur(1rem);
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: min(30vh,10rem) 2rem;
+    transform: translateX(100%);
+  }
+
+  .primary-nav.visible{
+    transform: translateX(0%);
+    transition: transform 350ms ease-out;
+  }
+  .hid-but{
+    display: block;
+    position: absolute;
+    background: url('./../public/moonIcon.svg');
+    background-repeat: no-repeat;
+    border: 0;
+    width: 2rem;
+    aspect-ratio: 1;
+    top: 2rem;
+    right:2rem;
+    z-index: 9999;
+    
+
+  }
+  .menu-text{
+    display: none;
+  }
+}
+
+
+
+
+
+
+
+
+#add-comment-form {
+  border-bottom: 2px solid black;
+  padding: 16px;
+}
+
+#add-comment-form h3 {
+  margin-bottom: 16px;
+}
+
+input, textarea {
+  display: block;
+  width: 300px;
+  padding: 8px;
+  border-radius: 8px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  border: 2px solid black;
+  margin-bottom: 16px;
+}
+
+.error {
+  padding: 8px;
+  border-radius: 4px;
+  background-color: pink;
+}
+
+#add-comment-form button {
+  width: 320px;
+}
+
+#upvotes-section button, p {
+  display: inline-block;
+  margin-right: 16px;
+}
+
+.comment {
+  border-bottom: 2px solid black;
+  padding: 16px;
 }
 
 
